# http_game_server

./: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
.github/workflows/: ci.yml
src/: collision_detector.h  extra_data.cpp  extra_data.h  geom.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  records_repository.cpp  records_repository.h  request_handler.cpp  request_handler.h  tagged.h
src/api/: request_context.h
src/api/handlers/: request_handler.h  responses.h
src/api/middleware/: request_utils.cpp  request_utils.h
src/api/serializers/: game_serializers.cpp  game_serializers.h
src/api/static_files/: static_file_handler.h
src/domain/game/: collision_detector.cpp  collision_detector.h  extra_data.h  geom.h  loot_generator.cpp  loot_generator.h
src/infra/: http_server.cpp  logger.cpp  logger.h  request_id.cpp  request_id.h
src/storage/: connection_pool.cpp  connection_pool.h  records_repository.cpp  records_repository.h
tests/: loot_generator_tests.cpp  model-tests.cpp
